--- a/src/App.css
+++ b/src/App.css
@@ -6,33 +6,38 @@
   box-sizing: border-box;
 }
 
-body {
+html,
+#root {
   height: 100vh;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #8ab4f8;
-  transition: 0.5s;
+  transition: 0.35s;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
 }
 
 .container {
+  transform: scale(1.05);
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 50px;
   place-items: center;
-  width: 250px;
+  width: 270px;
+  height: 520px;
   background: #f0f0f0;
   border-radius: 30px;
-  padding: 75px 0;
+  padding: 65px 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  transition: 0.75s;
 }
 
 .diceOne,
-.diceTwo,
-.rollSector {
+.diceTwo {
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   transform-style: preserve-3d;
   transition: 0.5s ease-in;
 }
@@ -47,9 +52,75 @@ body {
   justify-content: center;
 }
 
-@keyframes rolling {
+@keyframes rolling1 {
+  25% {
+    transform: rotateX(740deg) rotateY(540deg) translate(5px, 5px);
+  }
+}
+
+@keyframes rolling2 {
+  15% {
+    transform: rotateX(900deg) rotateY(900deg) translate(0, -5px);
+  }
+}
+
+@keyframes rolling3 {
+  50% {
+    transform: rotateX(450deg) rotateY(630deg);
+  }
+}
+
+@keyframes rolling4 {
+  25% {
+    transform: rotateX(1240deg) rotateY(640deg) translate(5px, 5px);
+  }
+}
+
+@keyframes rolling5 {
+  25% {
+    transform: rotateX(380deg) rotateY(1280deg) translate(5px, -5px);
+  }
+}
+
+@keyframes rolling6 {
+  25% {
+    transform: rotateX(480deg) rotateY(1280deg);
+  }
+}
+
+@keyframes rolling7 {
+  15% {
+    transform: rotateX(420deg) rotateY(1080deg) translate(-5px, -5px);
+  }
+}
+
+@keyframes rolling8 {
   35% {
-    transform: rotateX(445deg) rotateY(445deg);
+    transform: rotateX(765deg) rotateY(880deg) translate(-5px, 0);
+  }
+}
+
+@keyframes rolling9 {
+  25% {
+    transform: rotateX(840deg) rotateY(360deg);
+  }
+}
+
+@keyframes rolling10 {
+  15% {
+    transform: rotateX(360deg) rotateY(1080deg) translate(5px, 5px);
+  }
+}
+
+@keyframes rolling11 {
+  25% {
+    transform: rotateX(520deg) rotateY(1020deg) translate(-5px, 5px);
+  }
+}
+
+@keyframes rolling12 {
+  30% {
+    transform: rotateX(660deg) rotateY(750deg);
   }
 }
 
@@ -142,14 +213,19 @@ body {
 
 .roll,
 .roll-disabled {
+  display: flex;
   cursor: pointer;
-  width: 92px;
-  height: 50px;
+  width: 106px;
+  height: 70px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
   color: #448bfe;
-  border: 2px solid #448bfe;
-  border-radius: 5px;
-  font-size: 20px;
-  font-family: 'Georgia';
+  border: 3px solid #448bfe;
+  border-radius: 10px;
+  font-size: 22px;
+  font-weight: 600;
+  font-family: Arial;
   transition: 0.22s all ease-in-out;
 }
 
